[gd_scene load_steps=22 format=2]

[ext_resource path="res://scenes/battle_camera.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/battle_hud.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/battle_state_machine.gd" type="Script" id=3]
[ext_resource path="res://scripts/player_turn_state.gd" type="Script" id=4]
[ext_resource path="res://scripts/en_turn_state.gd" type="Script" id=5]
[ext_resource path="res://scripts/start_state.gd" type="Script" id=6]
[ext_resource path="res://scripts/pc_action_state.gd" type="Script" id=7]
[ext_resource path="res://scripts/pc_end_turn_state.gd" type="Script" id=8]
[ext_resource path="res://scripts/en_action_state.gd" type="Script" id=9]
[ext_resource path="res://scripts/en_end_turn_state.gd" type="Script" id=10]
[ext_resource path="res://scripts/victory_state.gd" type="Script" id=11]
[ext_resource path="res://scripts/defeat_state.gd" type="Script" id=12]
[ext_resource path="res://scripts/pc_attack_action_state.gd" type="Script" id=13]
[ext_resource path="res://scripts/pc_item_action_state.gd" type="Script" id=14]
[ext_resource path="res://scripts/pc_run_action_state.gd" type="Script" id=15]
[ext_resource path="res://scripts/pc_target_select_state.gd" type="Script" id=16]
[ext_resource path="res://scripts/pc_execute_attack_state.gd" type="Script" id=17]
[ext_resource path="res://scripts/pc_execute_item_state.gd" type="Script" id=18]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 40, 10 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.207843, 0.427451, 0.160784, 1 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 0.25, 0.25, 0.25 )

[node name="BattleStateMachine" type="Spatial"]
script = ExtResource( 3 )

[node name="hud" parent="." instance=ExtResource( 2 )]

[node name="floor" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="cam" parent="." instance=ExtResource( 1 )]

[node name="Camera" parent="cam" index="0"]
transform = Transform( 1, 0, 0, 0, 0.907007, 0.421115, 0, -0.421115, 0.907007, 0, 3.1007, 5.33396 )

[node name="pc_agents" type="Node" parent="."]

[node name="en_agents" type="Node" parent="."]

[node name="states" type="Node" parent="."]

[node name="start_state" type="Node" parent="states"]
script = ExtResource( 6 )

[node name="pc_turn_state" type="Node" parent="states"]
script = ExtResource( 4 )

[node name="pc_action_state" type="Node" parent="states"]
script = ExtResource( 7 )

[node name="pc_end_turn_state" type="Node" parent="states"]
script = ExtResource( 8 )

[node name="pc_attack_action_state" type="Node" parent="states"]
script = ExtResource( 13 )

[node name="pc_item_action_state" type="Node" parent="states"]
script = ExtResource( 14 )

[node name="pc_run_action_state" type="Node" parent="states"]
script = ExtResource( 15 )

[node name="pc_target_select_state" type="Node" parent="states"]
script = ExtResource( 16 )

[node name="pc_execute_attack_state" type="Node" parent="states"]
script = ExtResource( 17 )

[node name="pc_execute_item_state" type="Node" parent="states"]
script = ExtResource( 18 )

[node name="en_turn_state" type="Node" parent="states"]
script = ExtResource( 5 )

[node name="en_action_state" type="Node" parent="states"]
script = ExtResource( 9 )

[node name="en_end_turn_state" type="Node" parent="states"]
script = ExtResource( 10 )

[node name="defeat_state" type="Node" parent="states"]
script = ExtResource( 12 )

[node name="victory_state" type="Node" parent="states"]
script = ExtResource( 11 )

[node name="pc_agent_positions" type="Node" parent="."]

[node name="pc_agent_pos_1" type="Position3D" parent="pc_agent_positions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1, 0 )
visible = false

[node name="MeshInstance" type="MeshInstance" parent="pc_agent_positions/pc_agent_pos_1"]
mesh = SubResource( 3 )
material/0 = null

[node name="pc_agent_pos_2" type="Position3D" parent="pc_agent_positions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1, 2 )
visible = false

[node name="MeshInstance" type="MeshInstance" parent="pc_agent_positions/pc_agent_pos_2"]
mesh = SubResource( 3 )
material/0 = null

[node name="pc_agent_pos_3" type="Position3D" parent="pc_agent_positions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.994, 1, -2 )
visible = false

[node name="MeshInstance" type="MeshInstance" parent="pc_agent_positions/pc_agent_pos_3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.241726 )
mesh = SubResource( 3 )
material/0 = null

[node name="en_agent_positions" type="Node" parent="."]

[node name="en_agent_pos_1" type="Position3D" parent="en_agent_positions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, 0 )
visible = false

[node name="MeshInstance" type="MeshInstance" parent="en_agent_positions/en_agent_pos_1"]
mesh = SubResource( 3 )
material/0 = null

[node name="en_agent_pos_2" type="Position3D" parent="en_agent_positions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, 2 )
visible = false

[node name="MeshInstance" type="MeshInstance" parent="en_agent_positions/en_agent_pos_2"]
mesh = SubResource( 3 )
material/0 = null

[node name="en_agent_pos_3" type="Position3D" parent="en_agent_positions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, -2 )
visible = false

[node name="MeshInstance" type="MeshInstance" parent="en_agent_positions/en_agent_pos_3"]
mesh = SubResource( 3 )
material/0 = null

[node name="en_agent_pos_4" type="Position3D" parent="en_agent_positions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 1, 1 )
visible = false

[node name="MeshInstance" type="MeshInstance" parent="en_agent_positions/en_agent_pos_4"]
mesh = SubResource( 3 )
material/0 = null

[node name="en_agent_pos_5" type="Position3D" parent="en_agent_positions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 1, -1 )
visible = false

[node name="MeshInstance" type="MeshInstance" parent="en_agent_positions/en_agent_pos_5"]
mesh = SubResource( 3 )
material/0 = null

[editable path="cam"]
